style.css
@font-face {
    font-family: 'BebasNeue';
    src: url('Fonts/BebasNeue-Regular.woff') format('woff'),
         url('Fonts/BebasNeue-Regular.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'blowbrush';
    src: url('Fonts/blowbrush.woff') format('woff'),
         url('Fonts/blowbrush.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

html, body {
    margin: 0;
    padding: 0;
    background-image: url('Images/anime-sea.jpg');
  }  

.main-container {
    display: flex;
    flex-wrap: wrap;
    text-align: center;
    justify-content: center;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
}

.header {
    padding: 10px;
    padding-bottom: 5px;
    text-align: center;
    background-color: transparent;
    color: white;
    font-size: 70px;
    letter-spacing: 8px;
    text-shadow: black 1px 1px,black 0px 0px,black 1px 1px,black 2px 2px,black 3px 3px,black 4px 4px,black 5px 5px,black 6px 6px,black 7px 7px,black 8px 8px;/*#4A744D 9px 9px,#4A744D 10px 10px,#4A744D 11px 11px,#4A744D 12px 12px;*/
    font-family: 'blowbrush';
}

/* Increase the font size of the <h1> element */
.header h1 {
    font-size: 40px;
}

/* Style the top navigation bar */
.navbar {
    overflow: hidden;
    /* Hide overflow */
    display: flex;
    /* position: absolute; */
    /* padding-top: 8px; */
    justify-content: space-evenly;
    /* background-color: rgb(252, 183, 34); */
    background-color: transparent;
    /* border-bottom-style: solid;
    border-width: 2px; */
    /* Dark background color */
    /* z-index: 1; */
}

/* Style the navigation bar links */
.navbar a {
    /* display: block; */
    /* Change the display to block, for responsive reasons (see below) */
    color: black;
    /* White text color */
    text-align: center;
    /* Center the text */
    padding: 10px 26px;
    /* height: inherit; */
    /* padding: 1% 23%; */
    /* border-spacing: 20%; */
    /* border-width: 300px; */
    /* Add some padding */
    text-decoration: none;
    /* Remove underline */
}

.navbar a.itemselected{
    border-radius: 8px 8px 0px 0px;
    border-top-style: solid;
    border-right-style: solid;
    border-left-style: solid;
    border-width: 4px;
    width: 250px;
    font-family: 'BebasNeue';
    letter-spacing: 4px;
    font-size: 22px;
    font-weight: bold;
    background-color: rgb(235, 212, 138);
    /* text-decoration-line: underline; */
    /* background-image: linear-gradient(to bottom, rgb(158, 127, 42) 50%, rgb(235, 212, 138) 50%); */
    background-size: 100% 300%;
    transition: background-position 0.5s;
}

.navbar a.itemdeselected{
    border-radius: 8px 8px 0px 0px;
    border-top-style: solid;
    border-right-style: solid;
    border-left-style: solid;
    border-width: 4px;
    width: 250px;
    font-family: 'BebasNeue';
    letter-spacing: 4px;
    font-size: 22px;
    font-weight: bold;
    background-image: linear-gradient(to top, rgb(158, 127, 42) 70%, rgb(235, 212, 138) 70%);
    background-size: 100% 300%;
    background-position: -100%;
    transition: background-position 0.5s;
}

/* Change color on hover/mouse-over */
.navbar a:hover {
    /* background-color: #ddd; */
    /* color: black; */
    background-position: 0 0%;
    /* border-bottom-color: rgb(235, 212, 138);
    border-bottom-width: 4px; */
    height: 400%;
}

.projects {
    /* overflow: hidden; */
    /* Hide overflow */
    display: flex;
    flex-direction: column;
    width: 95%;
  }

.thumbnail {
    object-fit: cover;
    cursor: pointer;
    /* width: 100%; */
    height: 180px;
    object-position: 25% 25%;
    transition: 0.5s;
    opacity: 50%;
    padding: 5px;
    width: 95%;
    /* border-width: 10px; */
      /* Add the blur effect */
    filter: blur(1px);
    /* -webkit-filter: blur(1px); */

  }

  .thumbnail:hover {
    width: 99%;
    /* height: auto; */
    /* height: 30%; */
    /* object-position: 0% 0%; */
    opacity: 1;
    opacity: 80%;
      /* Add the blur effect */
    filter: blur(0px);
    /* -webkit-filter: blur(0px); */
    }

.body {
    display: flex;
    background-color: rgb(235, 212, 138);
    align-items: center;
}

.iframeOpen {
  height: 600px;
  width: 100%;
}

.iframeClose {
  height: 0px;
  opacity: 0%;
}

.footer {
    overflow: hidden;
    /* Hide overflow */
    display: flex;
    /* position: absolute; */
    /* padding-top: 8px; */
    justify-content:space-between;
    background-image: url('Images/anime-sea.jpg');
    /* background-color: transparent; */
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
    /* Some padding */
    text-align: center;
    transform:scaleX(-1);
    /* Center text*/
    /* background: rgb(158, 127, 42); */
    /* Grey background */
}

.leftfoot {
    animation: updown 2s ease infinite;
}

.rightfoot {
    animation: downup 2s ease infinite;
}

@keyframes updown {
    0% {
      transform: translateY(-50%);
    }
  
    50% {
      transform: translateY(0%);
    }
  
    100% {
      transform: translateY(-50%);
    }
  }


  @keyframes downup {
    0% {
      transform: translateY(0%);
    }
  
    50% {
      transform: translateY(-50%);
    }
  
    100% {
      transform: translateY(0%);
    }
  }

